@@ -4,7 +4,6 @@ import java.text.MessageFormat;
 import java.time.temporal.Temporal;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
 import java.util.function.Predicate;
 
 import org.minimalj.frontend.Frontend;
@@ -114,7 +113,7 @@ public abstract class ColumnFilterPredicate implements Predicate<Object>, Render
 		@Override
 		public void fillForm(FormContent formContent) {
 			super.fillForm(formContent);
-			formContent.add(Resources.getString("ColumnFilterModel.filterValue"), getInput(), null, 2);
+			formContent.add(Resources.getString("ColumnFilterModel.filterValue"), false, getInput(), null, 2);
 		}
 
 		private Input<String> getInput() {
@@ -128,7 +127,7 @@ public abstract class ColumnFilterPredicate implements Predicate<Object>, Render
 		protected void validate() {
 			if (!valid()) {
 				String name = "TODO";
-				formContent.setValidationMessages(input, List.of(MessageFormat.format(Resources.getString("ObjectValidator.message"), name)));
+				formContent.setValidationMessages(input, Collections.singletonList(MessageFormat.format(Resources.getString("ObjectValidator.message"), name)));
 			} else {
 				formContent.setValidationMessages(input, Collections.emptyList());
 			}
@@ -381,7 +380,7 @@ public abstract class ColumnFilterPredicate implements Predicate<Object>, Render
 		protected void validate() {
 			if (!valid()) {
 				String name = "TODO";
-				formContent.setValidationMessages(input1, List.of(MessageFormat.format(Resources.getString("ColumnFilterModel.filterValue1"), name)));
+				formContent.setValidationMessages(input1, Collections.singletonList(MessageFormat.format(Resources.getString("ColumnFilterModel.filterValue1"), name)));
 			} else {
 				formContent.setValidationMessages(input1, Collections.emptyList());
 			}
@@ -391,8 +390,8 @@ public abstract class ColumnFilterPredicate implements Predicate<Object>, Render
 		public void fillForm(FormContent formContent) {
 			super.fillForm(formContent);
 			initializeInputs();
-			formContent.add(Resources.getString("ColumnFilterModel.filterValue1"), input1, null, 1);
-			formContent.add(Resources.getString("ColumnFilterModel.filterValue2"), input2, null, 1);
+			formContent.add(Resources.getString("ColumnFilterModel.filterValue1"), false, input1, null, 1);
+			formContent.add(Resources.getString("ColumnFilterModel.filterValue2"), false, input2, null, 1);
 		}
 
 		@Override
